// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateOSDCluster ManagedClusterForm should fetch cloud providers, machine types, and quota when first mounted 1`] = `
<Fragment>
  <PageTitle
    breadcrumbs={
      <Unknown
        className="breadcrumbs-in-card"
      >
        <LinkContainer
          activeClassName="active"
          exact={false}
          replace={false}
          strict={false}
          to=""
        >
          <BreadcrumbItem
            to="#"
          >
            Clusters
          </BreadcrumbItem>
        </LinkContainer>
        <LinkContainer
          activeClassName="active"
          exact={false}
          replace={false}
          strict={false}
          to="/create"
        >
          <BreadcrumbItem
            to="#"
          >
            Create
          </BreadcrumbItem>
        </LinkContainer>
        <BreadcrumbItem
          isActive={true}
        >
          OpenShift Dedicated
        </BreadcrumbItem>
      </Unknown>
    }
    title="Create an OpenShift Dedicated Cluster"
  />
  <PageSection>
    <Spinner
      centered={true}
    />
  </PageSection>
</Fragment>
`;

exports[`CreateOSDCluster ManagedClusterForm should render managed form 1`] = `
<Fragment>
  <PageTitle
    breadcrumbs={
      <Unknown
        className="breadcrumbs-in-card"
      >
        <LinkContainer
          activeClassName="active"
          exact={false}
          replace={false}
          strict={false}
          to=""
        >
          <BreadcrumbItem
            to="#"
          >
            Clusters
          </BreadcrumbItem>
        </LinkContainer>
        <LinkContainer
          activeClassName="active"
          exact={false}
          replace={false}
          strict={false}
          to="/create"
        >
          <BreadcrumbItem
            to="#"
          >
            Create
          </BreadcrumbItem>
        </LinkContainer>
        <BreadcrumbItem
          isActive={true}
        >
          OpenShift Dedicated
        </BreadcrumbItem>
      </Unknown>
    }
    title="Create an OpenShift Dedicated Cluster"
  />
  <PageSection>
    <Card>
      <div
        className="pf-c-content ocm-page"
      >
        <Form
          onSubmit={[MockFunction]}
        >
          <Grid
            gutter="sm"
          >
            <ManagedClusterForm
              pending={false}
            />
            <GridItem>
              <Split
                className="create-osd-form-button-split"
                gutter="sm"
              >
                <SplitItem>
                  <Component
                    isDisabled={false}
                    onClick={[MockFunction]}
                    type="submit"
                    variant="primary"
                  >
                    Create cluster
                  </Component>
                </SplitItem>
                <SplitItem>
                  <Link
                    replace={false}
                    to="/"
                  >
                    <Component
                      isDisabled={false}
                      variant="secondary"
                    >
                      Cancel
                    </Component>
                  </Link>
                </SplitItem>
                <SplitItem />
              </Split>
            </GridItem>
          </Grid>
        </Form>
      </div>
    </Card>
  </PageSection>
</Fragment>
`;
